--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
-      scrollbar-width: none;
-      -ms-overflow-style: none;
+        scrollbar-width: none;
+        -ms-overflow-style: none;
     }
-
+    @media print {
+      .area {
+        display: none !important;
+      }
+      .print-struk {
+        display: block !important;
+      }
+    }
     body::-webkit-scrollbar {
       display: none;
     }
@@ -121,7 +128,9 @@
       height: calc(100% - 6pc);
       border: 2px solid #999;
     }
-
+    .alert {
+      text-align: center;
+    }
     .itemlist {
       display: flex;
       flex-wrap: wrap;
@@ -288,69 +297,171 @@
       background-color: rgb(0, 160, 237);
       color: white;
     }
+
+    .title {
+        text-align: center;
+    }
+    .line {
+        text-align: center;
+        font-weight: bold;
+    }
+    .row{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .inf-name  {
+        width: 30%;
+    }
+    .inf-titik {
+        width: 20%;
+    }
+    .inf-value {
+        width: 50%;
+
+    }
+
+    .item-name  {
+        width: 40%;
+    }
+    .item-count {
+        width: 20%;
+        text-align: center;
+    }
+    .item-count-price {
+        width: 20%;
+        text-align: center;
+    }
+    .item-price {
+        width: 20%;
+        text-align: right;
+    }
+
+    .price-name {
+        width: 60%;
+        text-align: right;
+    }
+    .price-value {
+        width: 40%;
+        text-align: right;
+    }
   </style>
 </head>
-
 <body>
+  <div class="area" style="display: block;">
+    <div class="navbar">
+      <div>Starbhak Mart</div>
+    </div>
+    <div class="content">
+      <div class="content-cart">
+        <select class="selection-dropdown" id="selection">
+          <option selected>Take Away</option>
+          <option value="1">Dine In</option>
+        </select>
+        <div class="cashier">
+          <i class='bx bxs-user'></i>Mang Jay
+        </div>
+        <div class="cartlist-border">
+          <div class="cartlist">
+          </div>
+        </div>
+        <div class="cart-display-text">
+          <p>Discount:</p>
+          <div class="-display-text-cart-row">
+            <p>Tax:</p>
+            <p id="tax-text">0</p>
+          </div>
+          <div class="-display-text-cart-row" id="total">
+            <p>Total Amount:</p>
+            <p id="total-text">0</p>
+          </div>
+        </div>
+      </div>
+      <div class="content-item">
+        <div class="itembar">
+          <p>item list</p>
+          <div style="display: flex; margin: 5px 0pc 5px 0;">
+            <input type="text" id="search" style="border: 2px solid black; padding: 5px; margin: 3px; display: none;">
+            <i class='bx bx-search-alt-2 bx-md' id="search-icon" onclick="bar()"></i>
+            <i class='bx bx-dots-vertical bx-md'></i>
+            <i class='bx bx-sort bx-md' onclick="sort()"></i>
+          </div>
+        </div>
+        <div class="itemlist-border">
+          <div class="alert">barang tidak ada</div>
+          <div class="itemlist">
+            
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="bottombar">
+      <button class="button-payment" onclick="printContentCart()">
+        <div class="button-payment-content">
+          <i class='bx bx-save bx-sm'></i>
+          <div class="button-payment-content-text">
+            <p>payment</p>
+            <p>(CTRL + P)</p>
+          </div>
+        </div>
+      </button>
+      <div class="ready">
+        Ready
+      </div>
+    </div>
+  </div>
+  <div class="print-struk" style="display: none; font-size: 30px;">
+    <div class="title">
+        <div style="font-weight: bold;">Starbhak Mart</div>
+        <div>Jl. Pekapuran</div>
+        <div>false</div>
+    </div>
+    <div class="line">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</div>
+    <div class="line">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</div>
+    <div class="information">
+        <div class="row">
+            <div class="inf-name">Kasir</div>
+            <div class="inf-titik">:</div>
+            <div class="inf-value">Mang Jay</div>
+        </div>
+        <div class="row">
+            <div class="inf-name">No. Order</div>
+            <div class="inf-titik">:</div>
+            <div class="inf-value">40892135</div>
+        </div>
+        <div class="row">
+            <div class="inf-name">Tgl/Jam</div>
+            <div class="inf-titik">:</div>
+            <div class="inf-value" id="inf-datetime">11/30/2023 5:12:15 PM</div>
+        </div>
+    </div>
+    <div class="line">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</div>
+    <div class="line">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</div>
+    <div class="item">
 
-  <div class="navbar">
-    <div>Starbhak Mart open</div>
-  </div>
-  <div class="content">
-    <div class="content-cart">
-      <select class="selection-dropdown" id="selection">
-        <option selected>Take Away</option>
-        <option value="1">Dine In</option>
-      </select>
-      <div class="cashier">
-        <i class='bx bxs-user'></i>Mang Jay
-      </div>
-      <div class="cartlist-border">
-        <div class="cartlist">
-        </div>
-      </div>
-      <div class="cart-display-text">
-        <p>Discount:</p>
-        <div class="-display-text-cart-row">
-          <p>Tax:</p>
-          <p id="tax-text">0</p>
-        </div>
-        <div class="-display-text-cart-row" id="total">
-          <p>Total Amount:</p>
-          <p id="total-text">0</p>
-        </div>
-      </div>
     </div>
-    <div class="content-item">
-      <div class="itembar">
-        <p>item list</p>
-        <div style="display: flex; margin: 5px 0pc 5px 0;">
-          <input type="text" id="search" style="border: 2px solid black; padding: 5px; margin: 3px; display: none;">
-          <i class='bx bx-search-alt-2 bx-md' id="search-icon" onclick="bar()"></i>
-          <i class='bx bx-dots-vertical bx-md'></i>
-          <i class='bx bx-sort bx-md' onclick="sort()"></i>
+    <div class="line">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</div>
+    <div class="line">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</div>
+    <div class="price">
+        <div class="row">
+            <div class="price-name">jumlah :</div>
+            <div class="price-value" id="price-amount">0</div>
         </div>
-      </div>
-      <div class="itemlist-border">
-        <div class="itemlist">
+        <div class="row">
+            <div class="price-name">Diskon :</div>
+            <div class="price-value">0</div>
         </div>
-      </div>
+        <div class="row">
+            <div class="price-name">Pajak 10% :</div>
+            <div class="price-value" id="price-pajak">0</div>
+        </div>
+        <div class="row">
+            <div class="price-name">Total :</div>
+            <div class="price-value" id="price-total">0</div>
+        </div>
     </div>
-  </div>
-  <div class="bottombar">
-    <button class="button-payment" onclick="printbtn()">
-      <div class="button-payment-content">
-        <i class='bx bx-save bx-sm'></i>
-        <div class="button-payment-content-text">
-          <p>payment</p>
-          <p>(CTRL + P)</p>
-        </div>
-      </div>
-    </button>
-    <div class="ready">
-      Ready
-    </div>
-  </div>
+    <div class="line">TERIMA KASIH TELAH BERBELANJA</div>
+</div>
 </body>
 <script>
   // Fungsi yang akan dijalankan saat seluruh halaman dan aset dimuat
@@ -358,7 +469,6 @@
     showCartList();
     showItemList();
   });
-
 
   //deklarasi
   var cart = [];
@@ -441,31 +551,45 @@
           <div class="card-cart-row">
             <div class="left-text">Unit Price:</div>
             <div>Rp.`+ cart.price + `</div>
-            <div class="card-cart-icon" onclick="removeFromCart(`+ index + `);">
+            <div id="icon" class="card-cart-icon" onclick="removeFromCart(`+ index + `);">
               <i class='bx bx-trash bx-sm'></i>
             </div>
-            <div><button class="cart-btn" onclick="minusFromCart(`+ index + `)">-</button></div>
+            <div id="icon"><button class="cart-btn" onclick="minusFromCart(`+ index + `)">-</button></div>
+            <div class="count-text" style="display: none;">count</div>
             <div>`+ cart.count + `</div>
-            <div><button class="cart-btn" onclick="plusFromCart(`+ index + `)">+</button></div>
+            <div id="icon"><button class="cart-btn" onclick="plusFromCart(`+ index + `)">+</button></div>
           </div>
         </div>
       </div>`
         )
       }
     );
-    //menghitung total
-    var total = 0;
-    for (let i = 0; i < cart.length; i++) {
-      total = total + (cart[i].count * cart[i].price);
-    }
-    var tax = total * 0.1;
-    var aftertax = total + tax;
-    //mencetak total
-    $("#tax-text").text("Rp." + tax);
-    $("#total-text").text("Rp." + aftertax);
-    console.log(cart);
+    $("#tax-text").text("Rp." + Ftax());
+    $("#total-text").text("Rp." + Ftotal());
   }
 
+
+
+//fungsi jumlah
+  function Famount(){
+    var amount = 0;
+    for (let i = 0; i < cart.length; i++) {
+      amount = amount + (cart[i].count * cart[i].price);
+    }
+    return amount;
+  }
+
+  //fungsi pajak
+  function Ftax(){
+    var tax = Famount() * 0.1;
+    return tax;
+  }
+
+  //fungsi ditotal
+  function Ftotal(){
+    var total = Famount() + Ftax();
+    return total;
+  }
 
   //fungsi mencari
   $("#search").on('input', function () {
@@ -475,6 +599,7 @@
     item = dataitem.filter(function (obj) {
       return obj.name.toLowerCase().includes(katakunci);
     });
+    
     showItemList();
   });
 
@@ -497,6 +622,12 @@
       }
     );
     console.log(item);
+    if (item.length == 0){
+      $(".alert").show();
+    }
+    else {
+      $(".alert").hide();
+    }
   }
 
 
@@ -524,7 +655,7 @@
     showItemList();
   }
 
-
+//show hide search bar
   function bar() {
     $("#search").toggle();
     if (searchToggle == 0) {
@@ -538,10 +669,48 @@
     }
   }
 
-  function printbtn() {
-    window.print();
+  //fungsi untuk mencetak waktu
+  function showCurrentDateTime() {
+    var currentDate = new Date();
+    var day = currentDate.getDate();
+    var month = currentDate.getMonth() + 1; // Months are zero-based
+    var year = currentDate.getFullYear();
+    var hours = currentDate.getHours();
+    var minutes = currentDate.getMinutes();
+    var seconds = currentDate.getSeconds();
+
+    // Add leading zero if needed
+    day = day < 10 ? '0' + day : day;
+    month = month < 10 ? '0' + month : month;
+    hours = hours < 10 ? '0' + hours : hours;
+    minutes = minutes < 10 ? '0' + minutes : minutes;
+    seconds = seconds < 10 ? '0' + seconds : seconds;
+
+    var formattedDateTime = day + '/' + month + '/' + year + ' ' + hours + ':' + minutes + ':' + seconds;
+    return formattedDateTime;
   }
 
+  //fungsi untuk print struk
+  function printContentCart() {
+    $(".item").empty();
+    cart.forEach(
+      function(cart){
+        $(".item").append(`
+        <div class="row">
+          <div class="item-name">`+cart.name+`</div>
+          <div class="item-count-price">`+cart.price+`</div>
+          <div class="item-count">`+cart.count+`</div>
+          <div class="item-price">`+cart.price * cart.count+`</div>
+      </div>
+        `)
+      }
+    );
+    $("#price-amount").text(Famount());
+    $("#price-pajak").text(Ftax());
+    $("#price-total").text(Ftotal());
+    $("#inf-datetime").text(showCurrentDateTime());
+    window.print();
+  }
+  
 </script>
-
 </html>
